New version of MapCSS parser

--- a/debug/index.html
+++ b/debug/index.html
@@ -5,7 +5,7 @@
 	
 	<!--[if lt IE 9]><script src="../src/excanvas.js"></script><![endif]-->
 	
-	<script src="stylesheet.js"></script>
+	<script src="mapcss.js"></script>
 	
 	<script src="../src/rgbcolor.js"></script>
 	<script src="../src/geomops.js"></script>
