--- a/debug/index.html
+++ b/debug/index.html
@@ -37,7 +37,7 @@
 		canvas.width = canvas.height = 256 * 4;
 		
 		Kothic.iconsPath = 'http://osmosnimki.ru/leaf/icons/';
-		Kothic.preloadIcons(imagesToLoad);
+		Kothic.preloadIcons(MapCSS.imagesToLoad);
 		
 		Kothic.onRenderComplete = function(log) {
 			document.getElementById('debug').innerText = log;
