Removed non-free icon set

--- a/debug/index.html
+++ b/debug/index.html
@@ -37,7 +37,7 @@
 
 		canvas.width = canvas.height = 256 * 4;
 		
-        MapCSS.loadImages("osmosnimki-maps", "osmosnimki.png")
+        MapCSS.loadImages("osmosnimki-maps", "http://osmosnimki.ru/leaf/icons/osmosnimki.png")
 
 		Kothic.onRenderComplete = function(log) {
 			document.getElementById('debug').innerText = log;
