meta for mobile browsers

--- a/debug/index.html
+++ b/debug/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="leaflet/leaflet.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="leaflet/leaflet.ie.css" /><![endif]-->
 	
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+	
 	<script src="leaflet/leaflet.js"></script>
 	<script src="kothic-leaflet.js"></script>
 	
