refactoring, cut out textOnPath to a separate file

--- a/debug/index.html
+++ b/debug/index.html
@@ -8,14 +8,19 @@
 	
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	
+	<!-- Leaflet -->
 	<script src="leaflet/leaflet.js"></script>
 	<script src="kothic-leaflet.js"></script>
 	
-	<script src="../src/mapcss.js"></script>
-	<script src="../src/rgbcolor.js"></script>
-	<script src="../src/geomops.js"></script>
-	<script src="../src/kothic.js"></script>
+	<!-- Kothic -->
+	<script src="../src/lib/rgbcolor.js"></script>
+	<script src="../src/lib/geomops.js"></script>
 	
+	<script src="../src/kothic.js"></script>
+	<script src="../src/mapcss.js"></script>
+	<script src="../src/text.js"></script>
+	
+	<!-- Kothic style -->
 	<script src="osmosnimki.js"></script>
 	
 	<style>
