major refactoring and cleanup
Change-Id: I9003c460cecf711c76cbfd29a1f8f6a06860bd6b

--- a/debug/index.html
+++ b/debug/index.html
@@ -19,6 +19,7 @@
 	<script src="../src/kothic.js"></script>
 	<script src="../src/mapcss.js"></script>
 	<script src="../src/text.js"></script>
+	<script src="../src/path.js"></script>
 	
 	<!-- Kothic style -->
 	<script src="osmosnimki.js"></script>
