--- a/debug/index.html
+++ b/debug/index.html
@@ -13,13 +13,11 @@
 	<script src="kothic-leaflet.js"></script>
 	
 	<!-- Kothic -->
-	<script src="../src/lib/rgbcolor.js"></script>
-	<script src="../src/lib/geomops.js"></script>
-	
 	<script src="../src/kothic.js"></script>
 	<script src="../src/mapcss.js"></script>
 	<script src="../src/text.js"></script>
 	<script src="../src/path.js"></script>
+	<script src="../src/rgbcolor.js"></script>
 	
 	<!-- Kothic style -->
 	<script src="osmosnimki.js"></script>
