improve debug messages and fix github link

--- a/debug/index.html
+++ b/debug/index.html
@@ -43,6 +43,12 @@
 		#mapnik {
 			margin-bottom: 10px;
 			}
+		table {
+			border-collapse: collapse;
+			}
+		table td {
+			padding-right: 10px;
+			}
 	</style>
 </head>
 <body>
