--- a/debug/index.html
+++ b/debug/index.html
@@ -10,7 +10,6 @@
 	
 	<!-- Leaflet -->
 	<script src="leaflet/leaflet.js"></script>
-	<script src="kothic-leaflet.js"></script>
 	
 	<!-- Kothic -->
 	<script src="../src/kothic.js"></script>
@@ -19,6 +18,8 @@
 	<script src="../src/path.js"></script>
 	<script src="../src/rgbcolor.js"></script>
 	
+	<script src="../dist/kothic-leaflet.js"></script>
+
 	<!-- Kothic style -->
 	<script src="osmosnimki.js"></script>
 	
@@ -64,23 +65,14 @@
 		});
 		
 		var kothic = new L.TileLayer.Kothic();
-		/*kothic.setAdditionalStyle(function(style, tags, zoom, type, sel) {
-			var names = ['primary', 'secondary', 'tertiary', 'residential'];
-			
-			if (names.indexOf(tags['highway']) != -1 && !tags['ref'] && !tags['name']) {
-				style['default']['color'] = 'red';
-			}
-		});*/
-		/*if (tags['highway'] == 'primary' || ) {
-			style['default']['color'] = 'green';
-		} else if (tags['lit'] == 'no') {
-			style['default']['color'] = 'red';
-		}*/
+		
+		kothic.setAdditionalStyle(function(style, tags, zoom, type, sel) {
+			//...
+		});
 		
 		var map = new L.Map('map', {
-			center: new L.LatLng(53.9, 27.5), // Minsk 
-			//center: new L.LatLng(59.89, 30.26), // St. Peterburg 
-			zoom: 11
+			center: new L.LatLng(53.9, 27.55), // Minsk 
+			zoom: 12
 		});
 
 		kothic.on('load', function() {
