1. Cumulative MapCSS styles (styles with the same names will be added) 2. Added --name argument to MapCSS converter 3. Preload external images automatically when style was loaded

--- a/debug/index.html
+++ b/debug/index.html
@@ -94,8 +94,7 @@
 		MapCSS.onImagesLoad = function() {
 			map.addLayer(kothic);
 		};
-		MapCSS.loadImages("osmosnimki-maps", "http://osmosnimki.ru/leaf/icons/osmosnimki.png");
-		
+		MapCSS.preloadSpriteImage("osmosnimki-maps", "http://osmosnimki.ru/leaf/icons/osmosnimki.png");
 		
 		var mapnikVisible = false,
 			button = document.getElementById('mapnik');
