Added styles stack. You can load multiple MapCSS styles and show all of them at the same time.

--- a/debug/index.html
+++ b/debug/index.html
@@ -21,6 +21,9 @@
 
 	<!-- Kothic style -->
 	<script src="osmosnimki.js"></script>
+
+	<!-- Kothic style -->
+	<script src="surface.js"></script>
 	
 	<style>
 		body {
@@ -97,7 +100,7 @@
 		
 		var mapnikVisible = false,
 			button = document.getElementById('mapnik');
-		
+            
 		function toggleMapnik() {
 			if (mapnikVisible) {
 				map.removeLayer(mapnik);
