Added type to script tag

--- a/debug/index.html
+++ b/debug/index.html
@@ -68,7 +68,7 @@
 		<button id="mapnik" onclick="toggleMapnik()">Show Mapnik</button>
 		<div id="tileperf">Rendering...</div>
 	</div>
-	<script>
+	<script type="text/javascript">
 		var mapnik = new L.TileLayer('http://tile.osmosnimki.ru/kosmo/{z}/{x}/{y}.png', {
 			attribution: "Map data &copy; 2011 OpenStreetMap contributors, Imagery by <a href='http://osmosnimki.ru'>osmosnimki.ru</a>",
 			maxZoom: 22
