Added geomops.js reference

--- a/debug/index.html
+++ b/debug/index.html
@@ -16,6 +16,7 @@
 	<script src="../src/mapcss.js"></script>
 	<script src="../src/text.js"></script>
 	<script src="../src/path.js"></script>
+	<script src="../src/geomops.js"></script>
 	
 	<script src="../dist/kothic-leaflet.js"></script>
 
