--- a/debug/index.html
+++ b/debug/index.html
@@ -12,17 +12,7 @@
 	<script src="leaflet/leaflet.js"></script>
 
 	<!-- CanvasProxy -->
-	<script src="../src/canvasproxy.js"></script>
-	<!-- Kothic -->
-    <script src="../src/kothic.js"></script>
-    <script src="../src/collisions.js"></script>
-    <script src="../src/style.js"></script>
-    <script src="../src/utils.js"></script>
-	<script src="../src/mapcss.js"></script>
-	<script src="../src/text.js"></script>
-	<script src="../src/path.js"></script>
-    <script src="../src/shields.js"></script>
-	<script src="../src/geomops.js"></script>
+	<script src="kothic-include.js"></script>
 
 	<script src="../dist/kothic-leaflet.js"></script>
 
