--- a/debug/index.html
+++ b/debug/index.html
@@ -72,6 +72,7 @@
 		});
 
 		var kothic = new L.TileLayer.Kothic({minZoom: 8});
+        kothic.setStyles(['osmosnimki-maps', 'surface']);
 
 		var map = new L.Map('map', {
 			center: new L.LatLng(53.9, 27.55), // Minsk
