--- a/debug/index.html
+++ b/debug/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>A canvas Map of Minsk</title>
 
-	<link rel="stylesheet" href="leaflet/leaflet.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="leaflet/leaflet.ie.css" /><![endif]-->
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
 
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 
 	<!-- Leaflet -->
-	<script src="leaflet/leaflet.js"></script>
+	<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 
 	<!-- Include Kothic renderer sources -->
 	<script src="kothic-include.js"></script>
