asynchronous rendering of different layers, yay!

--- a/debug/index.html
+++ b/debug/index.html
@@ -57,7 +57,8 @@
 
 		var map = new L.Map('map', {
 			center: new L.LatLng(53.9, 27.55), // Minsk
-			zoom: 12
+			zoom: 12,
+			fadeAnimation: false
 		});
 
 		kothic.on('load', function() {
