update osmosnimki icons to a working url

--- a/debug/tile.html
+++ b/debug/tile.html
@@ -24,7 +24,7 @@
             });
         };
 
-        MapCSS.preloadSpriteImage("osmosnimki", "http://osmosnimki.ru/leaf/icons/osmosnimki.png");
+        MapCSS.preloadSpriteImage("osmosnimki", "http://toolserver.org/~osm/kothic/osmosnimki.png");
 
         function invertYAxe(data) {
             var type, coordinates, tileSize = data.granularity, i, j, k, l, feature;
